Closed Bug 101608 Opened 24 years ago Closed 24 years ago

Traceback tables should remain on for Mac OS X release builds

Categories

(SeaMonkey :: Build Config, defect, P2)

PowerPC
macOS
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.6

People

(Reporter: sfraser_bugs, Assigned: jj.enser)

References

Details

(Whiteboard: 10/10 needs r=, sr=, [PDT+] and [OSX+])

Attachments

(6 files)

We should leave traceback tables on for Mac OS X release builds, otherwise we have no way to get info about crashes (since we have no Talkback).
nsbranch+, we want this in our next release.
Keywords: nsbranch+
Priority: -- → P2
Whiteboard: 9/28 need fix and eventual PDT+ and OSX+
Target Milestone: --- → mozilla0.9.5
Blocks: 102989
The same IDE_Options.h file is used for Classic & Carbon builds, so if we leave traceback option turned on, it will affects both builds. is that ok ?
Status: NEW → ASSIGNED
How about #if TARGET_CARBON?
not blocking 0.9.5, moving to 0.9.6
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Blocks: 102998
Whiteboard: 9/28 need fix and eventual PDT+ and OSX+ → 9/28 need fix and eventual PDT+, [OSX+]
jj, you need to make that a unified diff with a few lines of context. Use the Advanced Diff option in MacCVS Pro
Fine, I'll post a context diff even though this one is pretty straightforward :-/ seeking review for the patch to IDE_Options. This needs to land on the 0.9.4 branch first, then everywhere else. note: I have an equivalent patch for ns/build/mac/IDE_Options.h. I suppose both are needed
Whiteboard: 9/28 need fix and eventual PDT+, [OSX+] → 10/10 needs r=, sr=, PDT+ and OSX+
Please left-align the #ifdef TARGET_CARBON. And it should be #if TARGET_CARBON
Comment on attachment 52955 [details] [diff] [review] Additional patch required to make the #if TARGET_CARBON test work in IDE_Options.h r=sdagley w/smfr's changes. You'll also need the patch I attached or the #if TARGET_CARBON test will always fail in IDE_Options.h
Attachment #52955 - Flags: review+
Comment on attachment 52945 [details] [diff] [review] Same patch as above, but as "unified diff" This is the one I meant to r=
Attachment #52945 - Flags: review+
Comment on attachment 52955 [details] [diff] [review] Additional patch required to make the #if TARGET_CARBON test work in IDE_Options.h This is wrong. IDE_Options.h has to come after DefinesMac.h.
Attachment #52955 - Flags: needs-work+
um, that's what patch 52955 does
Never mind, I can't read
Comment on attachment 52955 [details] [diff] [review] Additional patch required to make the #if TARGET_CARBON test work in IDE_Options.h I suck, this is OK.
Attachment #52955 - Flags: needs-work+ → superreview+
Whiteboard: 10/10 needs r=, sr=, PDT+ and OSX+ → 10/10 needs r=, sr=, [PDT+] and [OSX+]
Simon, Steve, please add your respective r/sr marks for latest patch (attachment 53030 [review])
Comment on attachment 53030 [details] [diff] [review] rev#3 of the patch to IDE_Options.h with Simon's comments r=sdagley
Attachment #53030 - Flags: review+
Comment on attachment 53030 [details] [diff] [review] rev#3 of the patch to IDE_Options.h with Simon's comments Fix the spacing, and sr=sfraser
Attachment #53030 - Flags: superreview+
fixed. patches checked in to: mozilla/build/mac/IDE_Options.h mozilla/config/mac/NGLayoutConfigInclude.h ns/build/mac/IDE_Options.h
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
I'd suggest this go in on the 094 branch as well as the trunk. Also on the 095 branch if you can get drivers approval (and explain to them we get no debug info on OS X release builds if they balk at taking it)
Pls advise on how I can verify?
QA Contact: granrose → lchiang
To verify: make the build crash somehow(?), and look at the crash reporter report. It should give function names in the report, rather than just hex values.
To clarify how one gets a CrashReporter report, assuming Mac OS X 10.1, run the Console application (found in Applications/Utilities). Select the Preferences... item from the Console menu, click the Crashes tab in the prefs dialog, enable the checkboxes for Log crash information & Automatically display crash logs.
http://bugzilla.mozilla.org/show_bug.cgi?id=102727 is a way to crash on OS X. Petersen - I don't have OS X.1 (w/crash reporter installed). Can you verify the crash on OSX branch builds to make sure the stack trace shows function names instead of hex values? If so, then this bug report is verified.
QA Contact: lchiang → petersen
I have verified this is fixed in the 094 branch 2001-10-19 builds. Used bug 101868 to generate the crash. The log file shows the function names. Still need to verify on trunk so will leave this bug not yet marked verified.
Keywords: vtrunk
No longer blocks: 102998
Blocks: 102998
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: