landing fix for bug 101608 on the trunk (keeping traceback option on for optimized Carbon build). r=sdagley, sr=sfraser